--- a/src/components/windows/Window.module.scss
+++ b/src/components/windows/Window.module.scss
@@ -106,10 +106,10 @@ $overlayTransDuration: 0.5s;
     .demoLink {
         text-decoration: none!important;
         border: none;
-        color: rgb(211, 171, 248);
+        color: rgba(154, 112, 251, 0.993);
 
         &:hover {
-            color: rgb(161, 60, 255);
+            color: rgb(110, 0, 212);
         }
     }
 }
